2016-04-28  Segher Boesssenkool  <segher@kernel.crashing.org>

	* tracer.c (bb_seen): Make static.

2016-04-28  Andrew Burgess  <andrew.burgess@embecosm.com>

	* common/config/arc/arc-common.c (arc_handle_option): Add NPS400
	support, setup defaults.
	* config/arc/arc-opts.h (enum processor_type): Add NPS400.
	* config/arc/arc.c (arc_init): Add NPS400 support.
	* config/arc/arc.h (CPP_SPEC): Add NPS400 defines.
	(TARGET_ARC700): NPS400 is also an ARC700.
	* config/arc/arc.opt: Add NPS400 options to -mcpu=.

2016-04-28  Segher Boessenkool  <segher@kernel.crashing.org>

	PR target/70668
	* config/nds32/nds32.md (casesi): Don't access the operands array
	out of bounds.

2016-04-28  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/i386.md (zeroing peephole2): Use general_reg_operand.
	(or $-1,reg peephole2): Ditto.
	(strict_low_part zeroing peephole2): Use SWI12 mode iterator.

2016-04-28  Markus Trippelsdorf  <markus@trippelsdorf.de>

	* doc/extend.texi (Common Function Attributes) [optimize]:
	Discourage use of the optimize attribute.

2016-04-28  Bill Seurer  <seurer@linux.vnet.ibm.com>

	* config/rs6000/rs6000-builtin.def (vec_adde): Change vec_adde to a
	special case builtin.
	* config/rs6000/rs6000-c.c (altivec_overloaded_builtins): Remove
	ALTIVEC_BUILTIN_VEC_ADDE.
	* config/rs6000/rs6000-c.c (altivec_resolve_overloaded_builtin): Add
	support for ALTIVEC_BUILTIN_VEC_ADDE.
	* config/rs6000/rs6000.c (altivec_init_builtins): Add definition
	for __builtin_vec_adde.

2016-04-28  Jakub Jelinek  <jakub@redhat.com>

	* config/i386/i386.md (sse4_1_round<mode>2): Add avx512f alternative.
	* config/i386/sse.md (sse4_1_round<ssescalarmodesuffix>): Likewise.

2016-04-28  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	PR testsuite/70595
	* doc/sourcebuild.texi (Effective-Target Keywords, Other
	attributes): Document cilkplus_runtime.

2016-04-28  Martin Jambor  <mjambor@suse.cz>

	* tree-cfg.c (verify_expr): Verify that local declarations belong to