@@ -1,3 +1,8 @@
+2016-04-28  Jakub Jelinek  <jakub@redhat.com>
+
+	PR target/70821
+	* gcc.target/i386/pr70821.c: New test.
+
 2016-04-28  Bill Seurer  <seurer@linux.vnet.ibm.com>
 
 	* gcc.target/powerpc/vec-adde.c: New test.
